--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+  a {
+    
+    text-decoration: none;
+    color: inherit;
+  }
+
 body {
   font-family: 'SF Mono', 'Monaco', 'Inconsolata', 'Roboto Mono', monospace;
   line-height: 1.8;
